--- a/vue-ui-docs/package.json
+++ b/vue-ui-docs/package.json
@@ -28,6 +28,7 @@
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "@vue/cli-service": "^3.0.1",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
@@ -39,6 +40,7 @@
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -59,6 +61,7 @@
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
     "vue-markdown-loader": "^2.4.1",
+    "vue-server-renderer": "^2.6.10",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.12.0",
